RESOLVED FIXED 144244
Class body ending with a semicolon throws a SyntaxError
https://bugs.webkit.org/show_bug.cgi?id=144244
Summary Class body ending with a semicolon throws a SyntaxError
Ryosuke Niwa
Reported 2015-04-26 18:43:46 PDT
class A { ; } or class A { foo() {}; } results in a syntax error but it shoulnd't.
Attachments
Patch (12.52 KB, patch)
2015-04-26 20:21 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2015-04-26 20:21:50 PDT
WebKit Commit Bot
Comment 2 2015-04-26 21:21:45 PDT
Comment on attachment 251720 [details] Patch Clearing flags on attachment: 251720 Committed r183383: <http://trac.webkit.org/changeset/183383>
WebKit Commit Bot
Comment 3 2015-04-26 21:21:49 PDT
All reviewed patches have been landed. Closing bug.
Gyuyoung Kim
Comment 4 2015-04-26 22:03:54 PDT
Gyuyoung Kim
Comment 5 2015-04-26 22:12:47 PDT
(In reply to comment #4) > Committed r183384: <http://trac.webkit.org/changeset/183384> I'm so sorry. My gardening patch messed up ChangeLog.
Alexey Proskuryakov
Comment 6 2015-04-26 22:56:33 PDT
Ryosuke Niwa
Comment 7 2015-04-27 02:57:25 PDT
Oh oops, let me look into it.
Ryosuke Niwa
Comment 8 2015-04-27 03:10:10 PDT
Oh it looks like this new test uncovered an existing bug in the code.
Ryosuke Niwa
Comment 9 2015-04-27 03:14:52 PDT
Added a test expectation in http://trac.webkit.org/changeset/183391. Will investigate the assertion failure in webkit.org/b/144258
Note You need to log in before you can comment on or make changes to this bug.